手势通信成功

--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,8 @@ __pycache__/
 
 # user specified
 Temp/UnityLockfile
+Temp/UnityTempFile-ad543e2f37a6121409c184710d251eec
+Temp/UnityTempFile-b2623347dbf626c44ae1a7db3560fe8b
+Library/metadata/a9/a9a5ef06478fd4a4e8fb8e4ef6ca0b28
+Library/metadata/a9/a9a5ef06478fd4a4e8fb8e4ef6ca0b28
+Library/metadata/00/00000000000000004000000000000000
