--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -145,9 +145,9 @@
      <Compile Include="Assets\OVR\Scripts\Util\OVRScreenFade.cs" />
      <Compile Include="Assets\OVR\Scripts\Util\OVRUGUI.cs" />
      <Compile Include="Assets\OVR\Scripts\Util\OVRVisionGuide.cs" />
+     <Compile Include="Assets\Socket.cs" />
      <Compile Include="Assets\main.cs" />
      <Compile Include="Assets\makeProcotal.cs" />
-     <Compile Include="Assets\udpSocket.cs" />
      <None Include="Assets\Plugins\donotdelete.txt" />
      <None Include="Assets\LeapMotion\Materials\Sources\Shaders\Toony-Basic.shader" />
      <None Include="Assets\LeapMotion\Resources\LeapCG.cginc" />
